--- a/Check.vcxproj
+++ b/Check.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="Check.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Check.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
